--- a/w2/apache2/file/index.html.j2
+++ b/w2/apache2/file/index.html.j2
@@ -1,8 +1,8 @@
 <html>
-  <head>
-    <title>{{ http_host }}</title>
-  </head>
-  <body>
-    <h1>Welcome to {{ http_host }}</h1>
-  </body>
+    <head>
+        <title>Welcome to {{ http_host }}!</title>
+    </head>
+    <body>
+        <h1>Success!  The {{ http_host }} server block is working!</h1>
+    </body>
 </html>
